feat: preons configuration yaml

--- a/docs/notes/2020-05.md
+++ b/docs/notes/2020-05.md
@@ -69,3 +69,22 @@ So a different markup style could be:
 You are free to modify and do as you choose to this library however, it uses [GPLv2.1](#LICENSE) to keep it free. Of course, you can commercialize your product where this library is part of a larger piece of work and is merely a dependency.
 
 [![](images/2020-05-09-14-18-35.png)](https://www.youtube.com/watch?v=JlIrSMzF8T4)
+
+## CSS Properties
+
+What didn't make the cut
+
+- background
+- border-top, border-bottom, border-left, border-right
+- filter
+- font
+- font-variant
+- list-style
+- list-style-image
+- list-style-position
+
+## Typescale
+
+https://type-scale.com/
+
+Perfect 4th
