fix: change preons command from `preon gen` to `preons stylesheet`
Preons is in keeping with the name of the repo vs Preon. And `preons stylesheet` is more explicit as to what it's trying to generate.

--- a/docs/notes/2020-05.md
+++ b/docs/notes/2020-05.md
@@ -1,10 +1,19 @@
 # 2020-05 Notes
 
-> [Gemma Black](https://gemmablack.dev)
+- [Config all the CSS properties](#config-all-the-CSS-properties)
+- [Choosing a licence for Preons](#licencelicense)
+- [CSS Properties](#css-properties)
+- [Typescale](#typescale)
+- [Finally I understand commander.js sub commands](#finally-I-understand-commander.js-sub-commands)
+- [How to distribute the preons theme](#how-to-distribute-the-preons-theme)
+- [The Preons CLI](#The-Preons-CLI)
+- [Config first approach](#Config-first-approach)
 
-## Document all CSS rules
+## Config all the CSS properties
 
-My thinking is, if I create a config of all CSS property names (or at least the most used ones), it's not that difficult to map preons rules to them. Then, any component made with any preon rule can be converted. Therefore, different companies, teams and people can use functional class syntax that they are most comfortable with.
+My thinking is, if I create a config of all CSS property names (or at least the most used ones), it's not that difficult to map preons into a fully fledge utility library.
+
+Therefore, different companies, teams and people can use the functional class syntax that they are most comfortable with.
 
 As I'm probably not making any sense, here's an example.
 
@@ -42,11 +51,11 @@ Say I have a simple card component:
 
 ```html
 <div class="pa2 bg-grey-light">
-    <h3 class="fs3 lh2 fwb mb2">My headline</h3>
-    <img class="w-100 mb2" src="image.png" />
-    <p class="fs1 lh1">
-        Some short description that is part of the card
-    </p>
+  <h3 class="fs3 lh2 fwb mb2">My headline</h3>
+  <img class="w-100 mb2" src="image.png" />
+  <p class="fs1 lh1">
+    Some short description that is part of the card
+  </p>
 </div>
 ```
 
@@ -56,15 +65,21 @@ So a different markup style could be:
 
 ```html
 <div class="pada2 bg-lightgrey">
-    <h3 class="fontsize3 lineh2 fontwbold mgb2">My headline</h3>
-    <img class="width-100 mb2" src="image.png" />
-    <p class="fontsize1 lineh1">
-        Some short description that is part of the card
-    </p>
+  <h3 class="fontsize3 lineh2 fontwbold mgb2">My headline</h3>
+  <img class="width-100 mb2" src="image.png" />
+  <p class="fontsize1 lineh1">
+    Some short description that is part of the card
+  </p>
 </div>
 ```
 
 ## Licence/License
+
+I decided to use GPLv2.1. I like that it encourages free use of software. "If taken freely, give freely" is the licence motto for this. I take kudos from WordPress and discovered however, that their themes and plugins operate under the same GPLv2.1 domain as a derivative work.
+
+It made me think, can someone insist a commercial plugin be made free? I don't know the answer to that but I don't want to prevent developers from not being able to commercialize Preons as part of a large piece of work.
+
+### Readme notice
 
 You are free to modify and do as you choose to this library however, it uses [GPLv2.1](#LICENSE) to keep it free. Of course, you can commercialize your product where this library is part of a larger piece of work and is merely a dependency.
 
@@ -72,7 +87,7 @@ You are free to modify and do as you choose to this library however, it uses [GP
 
 ## CSS Properties
 
-What didn't make the cut
+What didn't make the cut:
 
 - background
 - border-top, border-bottom, border-left, border-right
@@ -83,8 +98,148 @@ What didn't make the cut
 - list-style-image
 - list-style-position
 
+These are properties that have lots of rules applied to them as a catch-all CSS property. For instance, border-top has border style, width and color. This in my humble opinion, goes against the principle of functional CSS and the number of compositions will grow exponentially.
+
+Instead it is more verbose, but more concise to just use each border property separately. If one wants to join these together, I'm still a big fan of using BEM or modules for things like buttons as it helps better to create consistency.
+
+There's nothing stopping developers from using these properties in their own preons config files.
+
 ## Typescale
 
 https://type-scale.com/
 
-Perfect 4th
+Perfect 4th is being used as the default scale.
+
+## Finally I understand commander.js sub commands
+
+### What is a sub command
+
+Many CLI tools are much more involved than just one command.
+
+#### There's Git
+
+```bash
+$ git init
+$ git clone
+$ git checkout
+$ git add
+```
+
+Many of us use these commands everyday.
+
+#### There's Stripe CLI
+
+As a fan of Stripe's documentation, I had to highlight even there CLI is a joy to work with.
+
+```bash
+$ stripe login
+$ stripe listen
+$ strie logs
+```
+
+If we think of our commonly used CLI tools, they manage to package a lot of commands in. And I haven't even mentioned [Docker](https://docs.docker.com/engine/reference/commandline/cli/), [AWS](https://aws.amazon.com/cli/), [DigitalOcean](https://github.com/digitalocean/doctl) and [Kubernetes](https://kubernetes.io/docs/tasks/tools/install-kubectl/). All tools that I use, some more reguarly than others.
+
+### Why I had problems with commander
+
+The first time I used commander js, I read the documentations, but was confused. In fact, I am still confused by the [action handler sub command](https://github.com/tj/commander.js#action-handler-subcommands) description.
+
+> You can add options to a command that uses an action handler. The action handler gets passed a parameter for each argument you declared, and one additional argument which is the command object itself. This command argument has the values for the command-specific options added as properties.
+
+...🤷🏾‍♀️
+
+But the [stand-alone executable (sub)commands](https://github.com/tj/commander.js#stand-alone-executable-subcommands) finally clicked for me. So if you had the same 🤷🏾‍♀️ moment, hopefully this article will help.
+
+### Why do I want to use sub commands
+
+Off the top of my head, for preons, I see that already there needs to be:
+
+- A config-to-scss generator command
+- A config-to-css generator command
+- A documentations generator command
+- A class reference generator command
+- A components html generator command
+
+And so I want the commands to look like `preon stylesheet` or `preon stylesheet --scss` etc. In this istance, tt would make sense that the default generates plain old CSS, but all other types can be created as well. I want Preons to be agnostic to CSS compilers of choice.
+
+### How to create sub commands
+
+So the sub commands in commander js go like this.
+
+Create a cli command file called `myfile`:
+
+```js
+#!/usr/bin/env node
+
+const json = require("../../package.json");
+
+const { program } = require("commander");
+program.version(json.version);
+
+program.command("stylesheet", "Generates a stylesheet");
+
+program.parse(process.argv);
+```
+
+Ensure you have execute permissions on that file.
+
+```bash
+chmod +x myfile
+```
+
+In the same folder, create another separate command with the name, `myfile-stylesheet`.
+
+```js
+#!/usr/bin/env node
+
+const program = require("commander");
+
+program.option("-s, --scss", "scss").parse(process.argv);
+```
+
+Again, add execute permissions.
+
+```bash
+chmod +x myfile-stylesheet
+```
+
+And that's it. You now are able to route that `program.command` to the next CLI tool as a sub command.
+
+```bash
+myfile stylesheet --scss
+```
+
+Of course, you are well within your rights to call that file directly.
+
+## How to distribute the preons theme
+
+_todo_
+
+## The Preons CLI
+
+First pass looks like this. It doesn't work perfectly but it's good.
+
+```bash
+Usage: preons [options] [command]
+
+Options:
+  -V, --version      output the version number
+  -h, --help         display help for command
+
+Commands:
+  stylesheet [name]  Generates a stylesheet
+  help [command]     display help for command
+```
+
+```bash
+Usage: preons-stylesheet [options]
+
+Options:
+  -s, --scss   Scss stylesheet
+  -c, --css    CSS stylesheet
+  -i, --input  File of custom rules yaml
+  -h, --help   display help for command
+```
+
+## Config first approach
+
+_todo_
