fix: add experimental mode notice to readme

--- a/docs/notes/2020-05.md
+++ b/docs/notes/2020-05.md
@@ -243,3 +243,22 @@ Options:
 ## Config first approach
 
 _todo_
+
+## Experimental Mode
+
+Following the Semver conventions in Issue [363](https://github.com/semver/semver/issues/363).
+
+### 0.y.z
+
+During experimental mode, 0.y.z means "0.MAJOR.MINOR".
+
+"This is when you first start to apply SemVer principles: you are still in the 'privileged' 0.y.z range, but you already start to distinguish between breaking and non-breaking changes."
+
+I may have started SemVer too early then, as the features aren't fully formed. So I will stay at v0.3.0 instead and only do interations of this kind:
+
+### 0.3.z
+
+"In this phase it really means "0.3.MAJOR". Ie. things are generally expected to work
+but anything can break with any upgrade."
+
+I will thus commit with `fix: ....` instead until the main features are there.
