fix: compile preons config yaml also to css

--- a/docs/notes/2020-05.md
+++ b/docs/notes/2020-05.md
@@ -262,3 +262,27 @@ I may have started SemVer too early then, as the features aren't fully formed. S
 but anything can break with any upgrade."
 
 I will thus commit with `fix: ....` instead until the main features are there.
+
+## No node-sass, just sass
+
+Why?
+
+Node-sass across different environments is a point of never ending pain for me. I don't know, but having to quite regularly do `rebuild node-sass` highlights there's a problem that has not been solved.
+
+I then discovered this:
+
+https://www.npmjs.com/package/sass
+
+A pure javascript implementation for sass, compiled down from Dart.
+
+### Changed breakpoints rules syntax
+
+_todo_
+
+https://stackoverflow.com/questions/34373061/compass-sass-media-queries-767px-is-not-a-valid-css-value
+
+### Changed color variable
+
+_todo_
+
+https://stackoverflow.com/questions/34373061/compass-sass-media-queries-767px-is-not-a-valid-css-value
