fix: example buttons, avatars and cards

--- a/docs/notes/2020-05.md
+++ b/docs/notes/2020-05.md
@@ -286,3 +286,9 @@ https://stackoverflow.com/questions/34373061/compass-sass-media-queries-767px-is
 _todo_
 
 https://stackoverflow.com/questions/34373061/compass-sass-media-queries-767px-is-not-a-valid-css-value
+
+### Reset
+
+https://gist.github.com/DavidWells/18e73022e723037a50d6
+
+https://css-tricks.com/box-sizing/
