fix: references example in notes doc

--- a/docs/notes/2020-05.md
+++ b/docs/notes/2020-05.md
@@ -275,20 +275,36 @@ https://www.npmjs.com/package/sass
 
 A pure javascript implementation for sass, compiled down from Dart.
 
-### Changed breakpoints rules syntax
+## Changed breakpoints rules syntax
 
 _todo_
 
 https://stackoverflow.com/questions/34373061/compass-sass-media-queries-767px-is-not-a-valid-css-value
 
-### Changed color variable
+## Changed color variable
 
 _todo_
 
 https://stackoverflow.com/questions/34373061/compass-sass-media-queries-767px-is-not-a-valid-css-value
 
-### Reset
+## Reset
 
 https://gist.github.com/DavidWells/18e73022e723037a50d6
 
 https://css-tricks.com/box-sizing/
+
+## Reference
+
+padding
+
+| class | css           |
+| ----- | ------------- |
+| pa1   | padding: 1rem |
+| pa2   | padding: 2rem |
+
+padding-left
+
+| class | css                |
+| ----- | ------------------ |
+| pl1   | padding-left: 1rem |
+| pl2   | padding-left: 2rem |
