fix: release to npm using Intuit's auto

--- a/docs/notes/2020-05.md
+++ b/docs/notes/2020-05.md
@@ -212,7 +212,68 @@ Of course, you are well within your rights to call that file directly.
 
 ## How to distribute the preons theme
 
-_todo_
+### Whitelist first
+
+> Tip: instead of blacklisting files and folders in .npmignore, whitelist them in the &quot;files&quot; field in package.json.
+> &mdash; Dan Abramov (@dan_abramov)
+
+So I almost was going to use .npmignore but discovered that `files` array lets me only include what I want to distribute to npm.
+
+> https://docs.npmjs.com/files/package.json#files
+
+### npm publish
+
+> https://itnext.io/step-by-step-building-and-publishing-an-npm-typescript-package-44fe7164964c
+
+Running `npm publish` did something interesting. It ran the `script.prepare` hook in the package.json. So I am able to build the `preons.css` and `preons.scss` before it publishes.
+
+```bash
+
+> preons@0.0.1 prepare /Users/gemma/Workspace/preons
+> src/console/preons stylesheet > dist/preons.css && src/console/preons stylesheet --scss > dist/preons.scss
+
+npm notice
+npm notice 📦  preons@0.0.1
+npm notice === Tarball Contents ===
+npm notice 1.2kB   package.json
+npm notice 3.6kB   CHANGELOG.md
+npm notice 26.5kB  LICENSE
+npm notice 4.2kB   README.md
+npm notice 132.6kB dist/preons.css
+npm notice 13.8kB  dist/preons.scss
+npm notice 7.2kB   dist/reset.css
+npm notice === Tarball Details ===
+npm notice version:       0.0.1
+npm notice total files:   7
+npm notice
+```
+
+### Automatically publishing to npm
+
+> https://intuit.github.io/auto/plugins/npm/README.html
+
+```
+yarn add -D @auto-it/npm
+```
+
+#### Prerequisites
+
+"To publish to npm you will need an NPM_TOKEN set in your environment."
+
+https://docs.npmjs.com/creating-and-viewing-authentication-tokens
+
+#### Manually add it to the .autorc
+
+```json
+{
+  "plugins": [
+    "npm",
+    // or with options
+    ["npm", { "forcePublish": false }]
+    // other plugins
+  ]
+}
+```
 
 ## The Preons CLI
 
