Update CHANGELOG.md [skip ci]

--- a/docs/notes/2020-05.md
+++ b/docs/notes/2020-05.md
@@ -369,3 +369,17 @@ padding-left
 | ----- | ------------------ |
 | pl1   | padding-left: 1rem |
 | pl2   | padding-left: 2rem |
+
+## What is GPG
+
+```bash
+18 error Command failed: git tag v0.3.8 -sm Bump version to: 0.3.8 [skip ci]
+18 error error: cannot run gpg: No such file or directory
+18 error error: gpg failed to sign the data
+18 error error: unable to sign the tag
+19 verbose exit [ 1, true ]
+```
+
+Running `npm run release` keeps generating the following error.
+
+https://www.youtube.com/watch?v=1-MPcUHhXoc
