fix: use exec to bump package version

--- a/docs/notes/2020-05.md
+++ b/docs/notes/2020-05.md
@@ -385,3 +385,11 @@ Running `npm run release` keeps generating the following error.
 https://www.youtube.com/watch?v=GSIDS_lvRv4
 
 https://help.github.com/en/github/authenticating-to-github/generating-a-new-gpg-key
+
+Can't get GPG to work
+
+https://docs.npmjs.com/cli/version
+
+```
+npm version from-git
+```
