fix: change baseline and discrete percentages

--- a/docs/notes/2020-05.md
+++ b/docs/notes/2020-05.md
@@ -393,3 +393,18 @@ https://docs.npmjs.com/cli/version
 ```
 npm version from-git
 ```
+
+## UnPkg
+
+https://unpkg.com/
+
+It's a free cdn for npm projects. So I can build preons' assets and have them hosted there. [Michael Jackson](https://twitter.com/mjackson), the developer one created this project. I'm familiar with his Twitter profile but didn't appreciate the work that he did.
+
+https://unpkg.com/preons/dist/preons.css
+
+## Importing scss from node_modules
+
+https://github.com/Shopify/slate/issues/582
+
+> Run yarn add bootstrap@4.1.1.  
+> In theme.scss, add @import '~bootstrap/scss/bootstrap'; (this will import the entire bootstrap library and this path follows the folder structure for that version of the Bootstrap module).
