--- a/docs/notes/2020-05.md
+++ b/docs/notes/2020-05.md
@@ -137,7 +137,7 @@ $ stripe listen
 $ strie logs
 ```
 
-If we think of our commonly used CLI tools, they manage to package a lot of commands in. And I haven't even mentioned [Docker](https://docs.docker.com/engine/reference/commandline/cli/), [AWS](https://aws.amazon.com/cli/), [DigitalOcean](https://github.com/digitalocean/doctl) and [Kubernetes](https://kubernetes.io/docs/tasks/tools/install-kubectl/). All tools that I use, some more reguarly than others.
+If we think of our commonly used CLI tools, they manage to package a lot of commands in. And I haven't even mentioned [Docker](https://docs.docker.com/engine/reference/commandline/cli/), [AWS](https://aws.amazon.com/cli/), [DigitalOcean](https://github.com/digitalocean/doctl) and [Kubernetes](https://kubernetes.io/docs/tasks/tools/install-kubectl/). All tools that I use, some more regularly than others.
 
 ### Why I had problems with commander
 
