fix: translator beginnings, going from css into preons.yaml
But it doesn't do hovers well. And media queries haven't been accounted for.

--- a/docs/notes/2020-05.md
+++ b/docs/notes/2020-05.md
@@ -408,3 +408,21 @@ https://github.com/Shopify/slate/issues/582
 
 > Run yarn add bootstrap@4.1.1.  
 > In theme.scss, add @import '~bootstrap/scss/bootstrap'; (this will import the entire bootstrap library and this path follows the folder structure for that version of the Bootstrap module).
+
+## Node versions support
+
+This package will support node v10+. But it won't work on v8.
+
+The good thing, is Nodejs 10 looks like the minimum version that is supported right now.
+
+https://nodejs.org/en/about/releases/
+
+![](images/2020-05-30-18-09-14.png)
+
+https://docs.npmjs.com/files/package.json#engines
+
+```json
+{ "engines": { "node": ">=0.10.3 <0.12" } }
+```
+
+So using engines will help to prevent issues with wrong versions. It's better a user discovers their node is incompatible with the package at installation than to try and use it and then find out. Better experience.
